CHANGES.txt - 2006-04-14
------------------------

CHANGES IN CUPS V1.2rc3

	- Added some more error checking to httpGetHostname()
	  (STR #1561)
	- The title of some administration pages was not
	  localized (STR #1548)
	- The edit-config.tmpl file was not generated or
	  installed for the Spanish or Japanese localizations
	  (STR #1547)
	- The mimeDelete() function freed the types before the
	  filters, but the filters needed the type data (STR #1558)
	- The scheduler didn't keep track of the status pipes
	  properly, leading to a bad select() for multi-file jobs
	  (STR #1559)
	- The cupstestdsc program didn't validate the ordinal
	  page number value for %%Page: comments.


CHANGES IN CUPS V1.2rc2

	- The scheduler was not always using the string pool,
	  causing random crashes.
	- The lpmove and the web interface's Move Job button did
	  not work with stopped jobs (STR #1534)
	- The PostScript filter did not handle the page-set
	  option properly with number-up printing (STR #1543)
	- The scheduler now only warns about unsupported ACLs
	  once (STR #1532)
	- The "fitplot" option did not work with output from
	  Mozilla (STR #1542)
	- The imagetops filter did not work with Level 2 or 3
	  printers (STR #1533)
	- The scheduler now recognizes PostScript files with PJL
	  commands that do not include an ENTER LANGUAGE command.
	- Added --with-printcap configure option.
	- 64-bit SSL fixes for MacOS X.
	- The scheduler didn't send some printer state change
	  events.
	- The scheduler didn't send jobs to busy remote printers.
	- Fixed some problems with the launchd support.
	- Added new USB printer backend for MacOS X.
	- The PostScript filter now handles files that start with
	  an incomplete PJL header (PR #6076)
	- The web interface language selection code did not try
	  the generic language localization (STR #1531)
	- The language cache, string pool, and transcoding caches
	  are now process global instead of per-thread to avoid